# OpenCLTemplate

./: ApplicationData.cpp  ApplicationData.h  ApplicationData.hpp  CMakeLists.txt  ColorDefines.h  Externs.hpp  Image.cpp  Image.h  ImageUtilities.cpp  ImageUtilities.h  Logger.cpp  Logger.h  README  RGBImage.cpp  RGBImage.h  RunApplication.cpp  clContext.cpp  clContext.h  clDevice.hpp  clHardware.cpp  clHardware.h  clHeaders.h  clKernels.cpp  clKernels.h  clPlatform.hpp  clUtilities.cpp  clUtilities.h  main.cpp  sample.h
